<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, StartActivity!</string>
    <string name="app_name">SBCToggle</string>
    <string name="sbc">Current SBC State:</string>
    <string name="buttontext">Toggle SBC State</string>
    <string name="sbcstate">Wait...</string>
    <string name="title">Savaged-Zen SBC Toggle</string>
    <string name="version">V1.00</string>
    <string name="onstart">Apply on phone restart?</string>
</resources>
