<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:layout_height="wrap_content" android:textSize="25sp" android:layout_width="wrap_content" android:id="@+id/textView3" android:text="@string/title" android:layout_x="24dip" android:layout_y="17dip"></TextView>
    <Button android:text="@string/buttontext"  android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sbctoggle" android:layout_x="97dip" android:layout_y="281dip"></Button>
    <TextView android:layout_height="wrap_content" android:textSize="20sp" android:layout_width="wrap_content" android:id="@+id/textView1" android:text="@string/sbc" android:layout_x="9dip" android:layout_y="194dip"></TextView>
    <TextView android:layout_height="wrap_content" android:textSize="20sp" android:layout_width="wrap_content" android:text="@string/sbcstate" android:layout_x="190dip" android:layout_y="194dip" android:id="@+id/sbcstate"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView4" android:text="@string/version" android:layout_x="140dip" android:layout_y="48dip"></TextView>
    <CheckBox android:layout_width="wrap_content" android:layout_x="9dip" android:layout_height="wrap_content" android:layout_y="226dip" android:id="@+id/onstart" android:text="@string/onstart"></CheckBox>

</AbsoluteLayout>
